<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Writter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_registro">NI PUTA IDEA</string>

    <!-- Strings del Activity Login -->
    <string name="logUsuario">Usuario:</string>
    <string name="logContrasena">Contraseña:</string>
    <string name="logAcceder">ACCEDER</string>
    <string name="logOlvido">¿Ha olvidado su contraseña?</string>
    <string name="logRegistrar">Regístrate aquí</string>

    <!-- Strings del Activity Registro -->
    <string name="regAlias">Alias:</string>
    <string name="regEmail">E-Mail:</string>
    <string name="regDescripcion">Descripción</string>
    <string name="regFoto">Foto</string>
    <string name="regRegistrar">REGISTRAR</string>
    <string name="title_activity_avuser">AVUser</string>
    <string name="title_activity_av_user">AvUser</string>

    <!-- Strings del Activity User -->
    <string name="usrNombre">Nombre del Usuario</string>
    <string name="usrDesc">Descripción escogida por el usuario:</string>
    <string name="usrBot1">Cambiar Foto</string>
    <string name="usrBot2">Editar Descripción</string>
    <string name="usrBot3">Cambiar Contraseña</string>
    <string name="usrBot4">Logout</string>

    <!-- Strings del Activity WritePost -->
    <string name="wpAnterior">Ver Post Anterior</string>
    <string name="wpPublicar">Publicar</string>
    <string name="wpTitulo">Título del libro</string>
    <string name="wpAutor">Escrito por: </string>

    <!-- Strings del Activity Book -->
    <string name="book_tv_titulo">Titulo:</string>
    <string name="book_tv_hashtag">Hashtags:</string>
    <string name="book_sw_hashtag1">Hashtag 1</string>
    <string name="book_sw_hashtag2">Hashtag 2</string>
    <string name="book_sw_hashtag3">Hashtag 3</string>
    <string name="book_sw_hashtag4">Hashtag 4</string>
    <string name="book_sw_hashtag5">Hashtag 5</string>
    <string name="book_sw_hashtag6">Hashtag 6</string>
    <string name="book_tv_tipo_libro">Tipo de libro</string>
    <string name="book_rb_relato">Relato</string>
    <string name="book_rb_frase">Frase</string>
    <string name="book_rb_novela">Novela</string>
    <string name="book_bt_comienza">Comienza</string>
    <string name="book_bt_limpia">Limpia</string>
    <string name="title_activity_activity_av_read_book">activity_av_read_book</string>

    <!-- Strings del Activity Read Book -->
    <string name="read_book_tv_titulo">Titulo</string>
    <string name="read_book_tv_usuario">Info usuario</string>
    <string name="read_book_tv_hashtag">Hashtags</string>
    <string name="read_book_bt_sigue">Sigue la historia</string>

    <!-- Strings del Activity List Book -->
    <string name="lbBuscar">Buscar</string>
    <string name="title_activity_principal_fragment">PrincipalFragment</string>

</resources>
