<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.mobwell.writter.model.av_book">

    <TabHost
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/tabHost"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"></TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:id="@+id/tab1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_tv_titulo"
                        android:id="@+id/book_tv_titulo" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/book_et_titulo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_tv_hashtag"
                        android:id="@+id/book_tv_hashtag" />

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="51dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="0.70">

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_sw_hashtag1"
                            android:id="@+id/switch1"
                            android:layout_row="0"
                            android:layout_column="0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView3"
                            android:layout_row="1"
                            android:layout_column="0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView9"
                            android:layout_row="1"
                            android:layout_column="2" />

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_sw_hashtag2"
                            android:id="@+id/switch2"
                            android:layout_row="2"
                            android:layout_column="0" />

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_sw_hashtag3"
                            android:id="@+id/switch5"
                            android:layout_row="2"
                            android:layout_column="2" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView4"
                            android:layout_row="3"
                            android:layout_column="0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView10"
                            android:layout_row="3"
                            android:layout_column="2" />

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_sw_hashtag4"
                            android:id="@+id/switch3"
                            android:layout_row="4"
                            android:layout_column="0" />

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_sw_hashtag5"
                            android:id="@+id/switch4"
                            android:layout_row="0"
                            android:layout_column="2" />

                        <Switch
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/book_sw_hashtag6"
                            android:id="@+id/switch6"
                            android:layout_row="4"
                            android:layout_column="2" />
                    </GridLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_tv_tipo_libro"
                        android:id="@+id/book_tv_tipo_libro" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_rb_relato"
                        android:id="@+id/book_rb_relato" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_rb_frase"
                        android:id="@+id/book_rb_novela" />

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_rb_novela"
                        android:id="@+id/book_rb_frases" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_bt_comienza"
                        android:id="@+id/book_bt_comienza" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book_bt_limpia"
                        android:id="@+id/book_bt_limpia" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab2"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"></LinearLayout>

                <LinearLayout
                    android:id="@+id/tab3"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"></LinearLayout>
                <LinearLayout
                    android:id="@+id/tab4"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical"></LinearLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>
