<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.mobwell.writter.AvLogin">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:id="@+id/log_ivLogo"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.31" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logUsuario"
            android:id="@+id/log_tvUsuario"
            android:layout_weight="0.03" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_etUsuario"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logContrasena"
            android:id="@+id/log_tvContrasena"
            android:layout_weight="0.03" />

        <EditText
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/log_etContrasena" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logAcceder"
            android:id="@+id/log_btAcceder"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logOlvido"
            android:id="@+id/log_tvOlvido"
            android:layout_weight="0.10" />

        <TextView
            android:layout_width="369dp"
            android:layout_height="wrap_content"
            android:text="@string/logRegistrar"
            android:id="@+id/log_tvRegistro"
            android:layout_weight="0.15" />
    </LinearLayout>
</RelativeLayout>
